--- a/index.html
+++ b/index.html
@@ -14,9 +14,66 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- Stylesheets -->
+  <link rel="stylesheet" href="css/float-grid.css" />
+  <link rel="stylesheet" href="css/main.css" />
 
 </head>
 <body>
-
+<header>
+  <div class="row">
+	<div class="col-12">
+	  <h2>Star Wars Characters</h2>
+	  <p>Incomplete list</p>
+	</div>
+  </div>
+</header>
+<main>
+  <div class="row">
+	<div class="col-4">
+	  <div class="character">
+		<img src="images/rey_square.png">
+		<p class="name">Ray</p>
+		<p>Protagonist, from Tattooine</p>
+	  </div>
+	</div>
+	<div class="col-4">
+	  <div class="character">
+		<img src="images/finn_square.png">
+		<p class="name">Finn</p>
+		<p>Storm trooper, befriends Ray</p>
+	  </div>
+	</div>
+	<div class="col-4">
+	  <div class="character">
+		<img src="images/kylo_square.png">
+		<p class="name">Kylo</p>
+	 	<p>Main villian, or is he?</p>
+	  </div>
+	</div>
+  </div>
+  <div class="row">
+	<div class="col-4">
+	  <div class="character">
+		<img src="images/poe_square.png">
+		<p class="name">Poe</p>
+		<p>Neutral pilot</p>
+	  </div>
+	</div>
+	<div class="col-4">
+	  <div class="character">
+		<img src="images/chewbacca_square.png">
+		<p class="name">Chewbacca</p>
+		<p>A great first mate</p>
+	  </div>
+	</div>
+	<div class="col-4">
+	  <div class="character">
+		<img src="images/yoda_square.png">
+		<p class="name">Yoda</p>
+		<p>Wise old Jedi master</p>
+	  </div>
+	</div>
+  </div>
+</main>
 </body>
 </html>
